globus-gridftp-server (9.5-1+gt6.@distro@) @distro@; urgency=low

  * update manpage for -encrypt-data

 -- Globus Toolkit <support@globus.org>  Tue, 15 Mar 2016 09:34:39 -0400

globus-gridftp-server (9.4-1+gt6.@distro@) @distro@; urgency=low

  * fix mem error when sharing

 -- Globus Toolkit <support@globus.org>  Wed, 16 Dec 2015 09:48:20 -0600

globus-gridftp-server (9.3-2+gt6.@distro@) @distro@; urgency=low

  * Update XIO Driver package names

 -- Globus Toolkit <support@globus.org>  Tue, 15 Dec 2015 10:44:38 -0500

globus-gridftp-server (9.3-1+gt6.@distro@) @distro@; urgency=low

  * Add configuration to require encrypted data channels

 -- Globus Toolkit <support@globus.org>  Mon, 23 Nov 2015 15:23:49 -0600

globus-gridftp-server (9.2-1+gt6.@distro@) @distro@; urgency=low

  * More robust cmp function

 -- Globus Toolkit <support@globus.org>  Fri, 20 Nov 2015 09:21:56 -0500

globus-gridftp-server (9.1-1+gt6.@distro@) @distro@; urgency=low

  * fix for thread race crash between sequential transfers
  * fix for partial stat punting when passed a single entry
  * fix for double free on transfer failure race

 -- Globus Toolkit <support@globus.org>  Tue, 03 Nov 2015 06:41:44 -0600

globus-gridftp-server (9.0-1+gt6.@distro@) @distro@; urgency=low

  * add SITE STORATTR command and associated DSI api

 -- Globus Toolkit <support@globus.org>  Fri, 23 Oct 2015 17:32:35 -0500

globus-gridftp-server (8.9-1+gt6.@distro@) @distro@; urgency=low

  * home dir is always / when shared chroot

 -- Globus Toolkit <support@globus.org>  Mon, 28 Sep 2015 17:31:52 -0500

globus-gridftp-server (8.8-1+gt6.@distro@) @distro@; urgency=low

  * Update internal home dir when DSI supplies one

 -- Globus Toolkit <support@globus.org>  Mon, 28 Sep 2015 11:57:54 -0500

globus-gridftp-server (8.7-1+gt6.@distro@) @distro@; urgency=low

  * Portability fixes for globus-gridftp-server-setup-chroot

 -- Globus Toolkit <support@globus.org>  Fri, 21 Aug 2015 14:14:39 -0400
