@@ -1,3 +1,9 @@
+globus-gridftp-server (9.6-1+gt6.@distro@) @distro@; urgency=low
+
+  * add SITE WHOAMI command to return currently authenticated user
+
+ -- Globus Toolkit <support@globus.org>  Thu, 24 Mar 2016 12:08:03 -0500
+
 globus-gridftp-server (9.5-1+gt6.@distro@) @distro@; urgency=low
 
   * update manpage for -encrypt-data
